--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         В первую очередь нужна версия VisioBible 2.4. Экспортируй песенник в текстовый файл. Затем загрузи этот файл сюда.
       </p>
       <p>
+        <img src="screenshot_vb-export.png" class="mw-100 rounded shadow-sm">
+      </p>
+      <p>
         Полученый архив распакуй и импортируй через пункт <i>Песни</i> -> <i>Импортировать</i> -> <i>Другое</i> -> <i>TXT File (UTF-8)</i>
+      </p>
+      <p>
+        <img src="screenshot_holyrics-import.png" class="mw-100 rounded shadow-sm">
       </p>
       <p>
         Файл обрабатывается локально в браузере. Никакие данные не отправляются на сервер.
