--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         Файл обрабатывается локально в браузере. Никакие данные не отправляются на сервер.
       </p>
 
-      <input type="file" class="form-control mb-3 js-file">
+      <input type="file" accept="text/plain" class="form-control mb-3 js-file">
 
       <div class="js-process d-none">
         <p>
