--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
       <h1>
         VisioBible -> Holrics
       </h1>
-      <p>
-        В первую очередь нужна версия VisioBible 2.4. Экспортируй песенник в текстовый файл. Затем загрузи этот файл сюда.
-      </p>
-      <p>
-        <img src="screenshot_vb-export.png" class="mw-100 rounded shadow-sm">
-      </p>
-      <p>
-        Полученый архив распакуй и импортируй через пункт <i>Песни</i> -> <i>Импортировать</i> -> <i>Другое</i> -> <i>TXT File (UTF-8)</i>
-      </p>
-      <p>
-        <img src="screenshot_holyrics-import.png" class="mw-100 rounded shadow-sm">
-      </p>
-      <p>
+      <details class="mb-3 pt-3">
+        <summary>Инструкция</summary>
+        <p>
+          В первую очередь нужна версия VisioBible 2.4. Экспортируй песенник в текстовый файл. Затем загрузи этот файл сюда.
+        </p>
+        <p>
+          <img src="screenshot_vb-export.png" class="mw-100 rounded shadow-sm">
+        </p>
+        <p>
+          Полученый архив распакуй и импортируй через пункт <i>Песни</i> -> <i>Импортировать</i> -> <i>Другое</i> -> <i>TXT File (UTF-8)</i>
+        </p>
+        <p>
+          <img src="screenshot_holyrics-import.png" class="mw-100 rounded shadow-sm">
+        </p>
+      </details>
+      
+      <p class="alert alert-secondary">
         Файл обрабатывается локально в браузере. Никакие данные не отправляются на сервер.
       </p>
 
