--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-12 pt-3">
       <h1>
-        VisioBible -> Holrics
+        VisioBible -> Holyrics
       </h1>
       <details class="mb-3 pt-3">
         <summary>Инструкция</summary>
